Translations updated by Schaatser

--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -83,12 +83,12 @@ connect.name=Verbinden
 
 console.updatecheck.new_developmentversion=------------ Nieuwe ontwikkel versie gedownload ------------
 
-##createshortcut.description=Creates a shortcut to this folder on your desktop
-##createshortcut.key=C
-##createshortcut.name=Create desktop shortcut
+createshortcut.description=Maakt een snelkoppeling naar de folder op het bureaublad
+createshortcut.key=S
+createshortcut.name=Maak een snelkoppeling
 
-##delete_confimation.busy.description=Removing file(s)
-##delete_confimation.busy.title=Deleting file(s)
+delete_confimation.busy.description=Verwijderen van bestand(en)
+delete_confimation.busy.title=Verwijderen van bestand(en)
 delete_confimation.text=Weet u zeker dat u het/de volgende bestand(en) wilt verwijderen\:\n\n{0}\nLet op\: deze bestanden worden werkelijk van uw computer verwijderd en niet in uw Prullenbak geplaatst
 delete_confimation.text_movetorecyclebin=Weet u zeker dat u de  volgende bestanden naar de PowerFolder Prullenbak wil verplaatsen?
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
@@ -148,8 +148,8 @@ downloadfile.unable_to_download=Download mislukt
 empty_recycle_bin.description=Maak PowerFolder prullenbalk leeg
 empty_recycle_bin.key=L
 empty_recycle_bin.name=Leeg Prullenbak
-##empty_recycle_bin.working.description=Deleting files
-##empty_recycle_bin.working.title=Emptying the Recycle Bin
+empty_recycle_bin.working.description=Verwijderen van bestanden
+empty_recycle_bin.working.title=Leeg maken van de prullenbak
 
 empty_recycle_bin_confimation.text=Weet u zeker dat u de PowerFolder Prullenbak wilt legen?
 empty_recycle_bin_confimation.title=Maak PowerFolder prullenbalk leeg
@@ -168,7 +168,7 @@ fileinfo.downloading=Downloaden
 fileinfo.downloading_from_member=Downloaden van {0}
 fileinfo.expected=Verwacht
 fileinfo.header=Bestand details
-##fileinfo.ignore=This file is excluded from synchronization
+fileinfo.ignore=Dit bestand wordt uitgezonderd van synchronizatie
 fileinfo.location=Lokatie
 fileinfo.modifiedby=Bewerkt door
 fileinfo.modifieddate=Bewerkt op
@@ -253,7 +253,7 @@ folderjoinleave.leave=Verlaat folder
 folderjoinleave.name=Lid worden
 
 folderleave.description=Verlaat deze folder (Stop delen en downloading van gegevens)
-##folderleave.dialog.sync_warning=The folder is currently synchronizing\!
+folderleave.dialog.sync_warning=De folder is momenteel aan het synchronizeren\!
 folderleave.dialog.text=Stop delen van folder {0} ?
 folderleave.dialog.title=Stop delen van Folder {0} ?
 folderleave.key=V
@@ -273,22 +273,22 @@ folderpanel.hometab.synchronisation_percentage=Synchronizatie percentage
 folderpanel.hometab.title=Start
 folderpanel.hometab.total_number_of_files=Totaal aantal bestanden (lokaal+verwijderd+beschikbaar)
 folderpanel.hometab.total_size=Totale omvang
-##folderpanel.settingstab.add_a_pattern.example=example/*.jpg
-##folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
-##folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
-##folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
-##folderpanel.settingstab.addbutton.key=A
-##folderpanel.settingstab.addbutton.name=Add
-##folderpanel.settingstab.edit_a_pattern.text=Edit a Pattern to exclude files from synchronization
-##folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
-##folderpanel.settingstab.editbutton.description=Edit a pattern
-##folderpanel.settingstab.editbutton.key=E
-##folderpanel.settingstab.editbutton.name=Edit
-##folderpanel.settingstab.ignorepatterns=Ignore patterns
-##folderpanel.settingstab.removebutton.description=Remove a pattern
-##folderpanel.settingstab.removebutton.key=R
-##folderpanel.settingstab.removebutton.name=Remove
-##folderpanel.settingstab.title=Settings
+folderpanel.settingstab.add_a_pattern.example=voorbeeld/*.jpg
+folderpanel.settingstab.add_a_pattern.text=Geef een patroon in om bestanden uit te zonderen van synchronizatie
+folderpanel.settingstab.add_a_pattern.title=Voeg patroon toe
+folderpanel.settingstab.addbutton.description=Geef een patroon in om bestanden uit te zonderen van synchronizatie
+folderpanel.settingstab.addbutton.key=T
+folderpanel.settingstab.addbutton.name=Toevoegen
+folderpanel.settingstab.edit_a_pattern.text=Bewerk een patroon om bestanden uit te zonderen van synchronizatie
+folderpanel.settingstab.edit_a_pattern.title=Bewerk uitzonderings patroon
+folderpanel.settingstab.editbutton.description=Bewerk een patroon
+folderpanel.settingstab.editbutton.key=B
+folderpanel.settingstab.editbutton.name=Bewerk
+folderpanel.settingstab.ignorepatterns=Uitzonderings patronen
+folderpanel.settingstab.removebutton.description=Verwijder een patroon
+folderpanel.settingstab.removebutton.key=V
+folderpanel.settingstab.removebutton.name=Verwijder
+folderpanel.settingstab.title=Instellingen
 
 folderrepository.warnonclose.neveraskagain=Nooit meer vragen. 
 folderrepository.warnonclose.text=Deze folder zijn nog niet gesynchronizeerd\:\n\n\n\n{0}\n\n\nDoorgaan met sluiten?
@@ -324,7 +324,7 @@ general.folder.secret=Prive (vereist invitatie)
 general.foldername=Naam
 general.friendlist=Vriendenlijst
 general.from=van
-##general.help=help
+general.help=help
 general.hide=verberg
 general.inet=i-net
 general.localcopyat=Lokale kopie 
@@ -354,13 +354,13 @@ general.user=User
 general.visibility=Toegankelijkheid
 general.yesterday=vandaag
 
-##hideoffline.description=The offline users will be filtered from this search result 
-##hideoffline.key=H
-##hideoffline.name=Hide offline users
+hideoffline.description=The niet verbonden gebruikers worden verborgen 
+hideoffline.key=V
+hideoffline.name=Verberg niet verbonden gebruikers 
 
-##ignorefile.description=File(s) will not be downloaded/shared 
-##ignorefile.key=I
-##ignorefile.name=Add file to Ignore
+ignorefile.description=Bestand(en) worden niet gedowload/gedeeld 
+ignorefile.key=U
+ignorefile.name=Voeg bestand toe aan uitzonderings lijst
 
 imagefileinfo.resolution=Resolutie
 imagefileinfo.unknown=Onbekend 
@@ -510,12 +510,12 @@ preferences.dialog.createdesktopshortcuts=Maak bureaublad snelkoppelingen
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Vraag om toevoegen aan vrienden als een gebruiker lid wordt van een folder
 preferences.dialog.dialogs.title=Dialogen
 preferences.dialog.dialogs.warnoncloseifnotinsync=Waarschuw bij sluiten van programma als folder nog aan het synchronizeren is
-preferences.dialog.dialogs.warnonlimitedconnectivity=Waarschuw bij lgelimieerde verbinding (Geen binnenkomende verbindingen)
+preferences.dialog.dialogs.warnonlimitedconnectivity=Waarschuw bij gelimiteerde verbinding (Geen binnenkomende verbindingen)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Waarschuw bij mogelijke bestandsnaam problemen (b.v. te lang voor "Apple Classic")
 preferences.dialog.dyndns=Mijn - dynamic - DNS
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 preferences.dialog.dyndns.title=DynDNS
-##preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
+preferences.dialog.dyndnsAutoUpdate=Hou dyndns up-to-date
 preferences.dialog.dyndnsCurrentIP=Huidig IP
 preferences.dialog.dyndnsHostname=Hostname
 preferences.dialog.dyndnsLoginPanel=Login
@@ -554,7 +554,7 @@ preferences.dialog.plugin.status_enabled=InActief
 preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=Door veranderingen in de instellingen is het nootzakelijk dat PowerFolder opnieuw opstart.\nWilt u PowerFolder nu opnieuw opstarten?\n 
 preferences.dialog.restarttitle=Opnieuw opstarten 
-##preferences.dialog.showadvanced=Show Advanced Preferences
+preferences.dialog.showadvanced=Toon geavanceerde instellingen
 preferences.dialog.showpreviewpanel=Activeer interne foto preview 
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>U kunt de interne foto preview vinden onder Mijn Folders->Folder->Bestanden->Details<BR>(Deze eigenschap van die programma is geheugen "hongerig" bij grote jpg's (>500K), gebruik voorzichtig.)</BODY></HTML>
 preferences.dialog.silentthrottle=Passive mode bandbreedte beperking 
@@ -614,11 +614,11 @@ reconnect.description=Reconnects to this user now
 reconnect.key=r
 reconnect.name=Reconnect
 
-##recyclebin.confirmation.overwrite.on.restore.changed.date=Changed {0}
-##recyclebin.confirmation.overwrite.on.restore.overwrite.filename=Overwrite {0}?
-##recyclebin.confirmation.overwrite.on.restore.size.bytes=Size {0}
-##recyclebin.confirmation.overwrite.on.restore.title=Restore file, overwrite?
-##recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=With file from recycle bin?
+recyclebin.confirmation.overwrite.on.restore.changed.date=Verandered {0}
+recyclebin.confirmation.overwrite.on.restore.overwrite.filename=Overschrijf {0}?
+recyclebin.confirmation.overwrite.on.restore.size.bytes=Grootte {0}
+recyclebin.confirmation.overwrite.on.restore.title=Herstel bestand, overschrijf
+recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=Met bestand van de prullenbak?
 
 remove_from_recycle_bin.description=Verwijder bestand van de PowerFolder Prullenbak
 remove_from_recycle_bin.key=V
@@ -643,8 +643,8 @@ requestnetfolderlist.description=Ververst de lijst van publieke folders
 requestnetfolderlist.key=V
 requestnetfolderlist.name=Ververs lijst
 
-##restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
-##restore.busy.title=Restoring file(s)
+restore.busy.description=Verplaats betanden van de PowerFolder prullenbak naar uw folder
+restore.busy.title=Herstel bestand(en)
 
 restorefile.description=Maak verwijdering van bestand ongedaan
 restorefile.key=h
@@ -747,9 +747,9 @@ transfers.requested=in wachtrij
 transfers.searching=Zoeken...
 transfers.to=Naar
 
-##unignorefile.description=File(s) will be downloaded/shared again
-##unignorefile.key=U
-##unignorefile.name=Remove from Ignore
+unignorefile.description=Bestand zal weer worden gedownload/gedeeld
+unignorefile.key=l
+unignorefile.name=Verwijder uit uitzonderings lijst
 
 webservice_request_folder_join.description=Vraag de PowerFolder webstore service om lid the worden van deze folder.
 webservice_request_folder_join.key=w
