Italian translations updated

--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -83,12 +83,12 @@ connect.name=Connesso
 
 console.updatecheck.new_developmentversion=------------ Scaricata nuova versione sviluppo------------
 
-##createshortcut.description=Creates a shortcut to this folder on your desktop
-##createshortcut.key=C
-##createshortcut.name=Create desktop shortcut
+createshortcut.description=Crea un collegamento alla tua cartella sul desktop
+createshortcut.key=C
+createshortcut.name=Crea un collegamento sul desktop
 
-##delete_confimation.busy.description=Removing file(s)
-##delete_confimation.busy.title=Deleting file(s)
+delete_confimation.busy.description=Rimozione file(s)
+delete_confimation.busy.title=Cancellazione file(s)
 delete_confimation.text=Sei sicuro di voler cancellare i seguenti file\:\n\n{0}\nQuesti file saranno veramente cancellati dal sistema e non verranno spostati nel tuo "cestino".
 delete_confimation.text_movetorecyclebin=Sei sicuro di voler mettere i seguenti file(s) nel cestino di PowerFolder?
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
@@ -148,8 +148,8 @@ downloadfile.unable_to_download=Download impossibile
 empty_recycle_bin.description=Svuota il cestino di PowerFolder
 empty_recycle_bin.key=S
 empty_recycle_bin.name=Svuota Il Cestino
-##empty_recycle_bin.working.description=Deleting files
-##empty_recycle_bin.working.title=Emptying the Recycle Bin
+empty_recycle_bin.working.description=Cancellazione files
+empty_recycle_bin.working.title=Svuotamento del Cestino in corso
 
 empty_recycle_bin_confimation.text=Sei sicuro di voler svuotare il cestino di PowerFolder?
 empty_recycle_bin_confimation.title=Svuota il cestino diPowerFolder
@@ -168,7 +168,7 @@ fileinfo.downloading=Sto scaricando
 fileinfo.downloading_from_member=Sto scaricando da {0}
 fileinfo.expected=Previsto
 fileinfo.header=Dettagli file
-##fileinfo.ignore=This file is excluded from synchronization
+fileinfo.ignore=Questo file Š escluso dalla sincronizzazione
 fileinfo.location=Percorso
 fileinfo.modifiedby=Modificato da
 fileinfo.modifieddate=Modificato il
