- Extracted limitiy connection checker from nodemanager - Removed workerthread on nodemanager - Replaced apache threadpool through java5 executor

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -376,7 +376,7 @@ join_by_invitation.name=Einladung laden
 ##joinfolder.already_joined_text=You are already a member of folder {0}
 ##joinfolder.already_joined_title=Unable to join {0}
 
-limitedconnection.text=PowerFolder hat eingeschr\u00e4nkte Konnektivit\u00e4t zum Netzwerk entdeckt.\nDer Grund k\u00f6nnte an Ihrer Firewall, Ihrem Router oder an einer Windows-Verbindungsteilung liegen.\nWie Sie die Konnektivit\u00e4t verbessern k\u00f6nnen, erfahren Sie unter\: \nhttp\://www.powerfolder.com
+limitedconnection.text=PowerFolder hat eingeschr\u00e4nkte Konnektivit\u00e4t zum Netzwerk entdeckt.\nDer Grund k\u00f6nnte an Ihrer Firewall, Ihrem Router oder an einer Windows-Verbindungsteilung liegen.\nWie Sie die Konnektivit\u00e4t verbessern k\u00f6nnen, erfahren Sie unter\: \nhttp\://docs.powerfolder.com
 limitedconnection.title=Eingeschr\u00e4nkte Konnektivit\u00e4t
 
 ##linespeed.T1=T1 1.544mbit/s upload
