"streamlined" translation files

--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -379,19 +379,20 @@ infoside.title=Informaci\u00f3n
 limitedconnection.text=PowerFolder ha detectado conectividad limitada a la red.\nPuede ser a causa de un cortafuegos, router o la Conexi\u00f3n Compartida de Windows.\nLa respuesta a c\u00f3mo mejorar su conexi\u00f3n la puede encontrar en nuestro FAQ.\nhttp\://www.powerfolder.com
 limitedconnection.title=Conectividad limitada
 
-##linespeed.T1=T1 1.544mbit/s upload
-##linespeed.T3=T3 43.232mbit/s upload
-##linespeed.adsl128=DSL 128Kbit upload
-##linespeed.adsl256=DSL 256Kbit upload
-##linespeed.adsl512=DSL 512Kbit upload
-##linespeed.adsl768=DSL 768Kbit upload
+##linespeed.T1=T1 xxx/ 1.544mbit
+##linespeed.T3=T3 xxx/ 43.232mbit
+##linespeed.adsl128=DSL xxx/ 128Kbit
+##linespeed.adsl256=DSL xxx/ 256Kbit
+##linespeed.adsl512=DSL xxx/ 512Kbit
+##linespeed.adsl768=DSL xxx/ 768Kbit
 ##linespeed.customspeed=Custom line
-##linespeed.isdnspeed128=ISDN 128Kbit
-##linespeed.isdnspeed64=ISDN 64Kbit
-##linespeed.lan10=LAN 10mbit/s upload
-##linespeed.lan100=LAN 100mbit/s upload
-##linespeed.lan1000=LAN 1000mbit/s upload
-##linespeed.unlimited=Unlimited upload
+##linespeed.downloadspeed=Download limit
+##linespeed.isdnspeed128=ISDN xxx/ 128Kbit
+##linespeed.isdnspeed64=ISDN xxx/ 64Kbit
+##linespeed.lan10=LAN 10mbit/s
+##linespeed.lan100=LAN 100mbit/s 
+##linespeed.lan1000=LAN 1000mbit/s
+##linespeed.unlimited=Unlimited traffic
 ##linespeed.uploadspeed=Upload limit
 
 linktoclipboard.description=Copia un enlace PowerFolder al portapapeles, \u00faselo para permitir que otros se unan a esta carpeta y descargen el archivo
@@ -701,6 +702,9 @@ splash.version=Versi\u00f3n {0}
 startdownloads.description=Abre los archivos descargados seleccionados
 startdownloads.key=s
 startdownloads.name=Abrir
+
+##status.download=Down\: %.2f KB/s
+##status.upload=Up\: %.2f KB/s
 
 ##synchronisation.notice.title=Activated synchronisation profile {0}
 synchronisation.warning.automatic_deletions=\u00a1Este modo tambi\u00e9n sincroniza el borrado de archivos\!\n\u00bfContinuar?
