--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -386,6 +386,7 @@ linespeed.adsl256=DSL 256Kbit \u00e9mission
 linespeed.adsl512=DSL 512Kbit \u00e9mission
 linespeed.adsl768=DSL 768Kbit \u00e9mission
 linespeed.customspeed=D\u00e9bit personnalis\u00e9
+##linespeed.downloadspeed=Download limit
 linespeed.isdnspeed128=ISDN 128Kbit
 linespeed.isdnspeed64=ISDN 64Kbit
 linespeed.lan10=LAN 10mbit/s \u00e9mission
@@ -701,6 +702,9 @@ splash.version=Version {0}
 startdownloads.description=Ouvrir les fichiers s\u00e9lectionn\u00e9s / t\u00e9l\u00e9charg\u00e9s
 startdownloads.key=O
 startdownloads.name=Ouvrir
+
+##status.download=Down\: %.2f KB/s
+##status.upload=Up\: %.2f KB/s
 
 synchronisation.notice.title=Activation du profil de synchronisation {0}
 synchronisation.warning.automatic_deletions=Ce mode synchronise les fichiers effac\u00e9s\!\nContinuer ?
