--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -379,19 +379,20 @@ join_by_invitation.name=\u62db\u5f85\u72b6\u306e\u8aad\u307f\u8fbc\u307f(I)
 limitedconnection.text=PowerFolder \u306f\u3001\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u63a5\u7d9a\u306b\u5236\u9650\u304c\u3042\u308b\u3053\u3068\u3092\u691c\u77e5\u3057\u307e\u3057\u305f\u3002\n\u3053\u308c\u306f\u3001\u30d5\u30a1\u30a4\u30a2\u30fc\u30a6\u30a9\u30fc\u30eb\u3084\u30eb\u30fc\u30bf\u3001Windows \u306e\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u63a5\u7d9a\u5171\u6709\u306a\u3069\u304c\u539f\u56e0\u306e\u53ef\u80fd\u6027\u304c\u3042\u308a\u307e\u3059\u3002\n\u63a5\u7d9a\u3092\u6539\u5584\u3055\u305b\u308b\u65b9\u6cd5\u306b\u3064\u3044\u3066\u306f\u3001\u3053\u3061\u3089\u306e FAQ \u30da\u30fc\u30b8\u3092\u53c2\u8003\u306b\u3057\u3066\u304f\u3060\u3055\u3044\u3002\nhttp\://www.powerfolder.com
 limitedconnection.title=\u5236\u9650\u3055\u308c\u305f\u63a5\u7d9a
 
-##linespeed.T1=T1 1.544mbit/s upload
-##linespeed.T3=T3 43.232mbit/s upload
+##linespeed.T1=T1 xxx/ 1.544mbit
+##linespeed.T3=T3 xxx/ 43.232mbit
 linespeed.adsl128=DSL \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 \u6700\u5927 128Kbit    
 linespeed.adsl256=DSL \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 \u6700\u5927 256Kbit    
 linespeed.adsl512=DSL \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 \u6700\u5927 512Kbit    
 linespeed.adsl768=DSL \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 \u6700\u5927 768Kbit    
 linespeed.customspeed=\u4efb\u610f\u6307\u5b9a\u901f\u5ea6\u56de\u7dda
+##linespeed.downloadspeed=Download limit
 linespeed.isdnspeed128=ISDN 128Kbit
 linespeed.isdnspeed64=ISDN 64Kbit
 linespeed.lan10=LAN \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 10mbit/s 
 linespeed.lan100=LAN \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 100mbit/s 
 linespeed.lan1000=LAN \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 1000mbit/s 
-##linespeed.unlimited=Unlimited upload
+##linespeed.unlimited=Unlimited traffic
 linespeed.uploadspeed=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u901f\u5ea6\u4e0a\u9650
 
 linktoclipboard.description=\u30af\u30ea\u30c3\u30af\u53ef\u80fd\u306a PowerFolder \u30ea\u30f3\u30af\u3092\u30af\u30ea\u30c3\u30d7\u30dc\u30fc\u30c9\u306b\u30b3\u30d4\u30fc\u3001\u4ed6\u30e6\u30fc\u30b6\u30fc\u304c\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0\u3057\u3066\u9078\u629e\u30d5\u30a1\u30a4\u30eb\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u53ef\u80fd\u306b\u3059\u308b\u305f\u3081\u306b\u4f7f\u7528
@@ -701,6 +702,9 @@ splash.version=\u30d0\u30fc\u30b8\u30e7\u30f3 {0}
 startdownloads.description=\u9078\u629e\u3057\u305f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u30d5\u30a1\u30a4\u30eb\u3092\u958b\u304f
 startdownloads.key=S
 startdownloads.name=\u958b\u304f(S)
+
+##status.download=Down\: %.2f KB/s
+##status.upload=Up\: %.2f KB/s
 
 synchronisation.notice.title={0} \u540c\u671f\u5f62\u5f0f\u306e\u6709\u52b9\u5316
 synchronisation.warning.automatic_deletions=\u3053\u306e\u30e2\u30fc\u30c9\u3067\u306f\u30d5\u30a1\u30a4\u30eb\u524a\u9664\u3082\u540c\u671f\u3055\u308c\u307e\u3059\uff01\n\u3088\u308d\u3057\u3044\u3067\u3059\u304b \uff1f
