--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -386,6 +386,7 @@ linespeed.adsl256=DSL 256Kbit upload
 linespeed.adsl512=DSL 512Kbit upload
 linespeed.adsl768=DSL 768Kbit upload
 linespeed.customspeed=Kies upload
+##linespeed.downloadspeed=Download limit
 linespeed.isdnspeed128=ISDN 128Kbit
 linespeed.isdnspeed64=ISDN 64Kbit
 linespeed.lan10=LAN 10mbit/s upload
@@ -701,6 +702,9 @@ splash.version=Versie {0}
 startdownloads.description=Opent het geselecteerde bestand
 startdownloads.key=O
 startdownloads.name=Open
+
+##status.download=Down\: %.2f KB/s
+##status.upload=Up\: %.2f KB/s
 
 synchronisation.notice.title=Gekozen synchronisatieprofiel {0}
 synchronisation.warning.automatic_deletions=Deze mode zal automatisch bestandsverwijderingen synchroniseren\!\nDoorgaan ?
