--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -386,6 +386,7 @@ linespeed.adsl256=DSL 256Kbit upload
 linespeed.adsl512=DSL 512Kbit upload
 linespeed.adsl768=DSL 768Kbit upload
 linespeed.customspeed=\u0414\u0440\u0443\u0433\u043e\u0435
+##linespeed.downloadspeed=Download limit
 linespeed.isdnspeed128=ISDN 128Kbit
 linespeed.isdnspeed64=ISDN 64Kbit
 linespeed.lan10=LAN 10mbit/s upload
@@ -701,6 +702,9 @@ splash.version=\u0412\u0435\u0440\u0441\u0438\u044f {0}
 startdownloads.description=\u041e\u0442\u043a\u0440\u044b\u0432\u0430\u0435\u0442 \u0432\u044b\u0431\u0440\u0430\u043d\u044b\u0435 \u0438 \u0434\u043e\u043a\u0430\u0447\u0435\u043d\u044b\u0435 \u0444\u0430\u0439\u043b\u044b
 startdownloads.key=s
 startdownloads.name=\u041e\u0442\u043a\u0440\u044b\u0442\u044c
+
+##status.download=Down\: %.2f KB/s
+##status.upload=Up\: %.2f KB/s
 
 synchronisation.notice.title=\u0410\u043a\u0442\u0438\u0432\u043d\u044b\u0439 \u043f\u0440\u043e\u0444\u0438\u043b\u044c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438 {0}
 synchronisation.warning.automatic_deletions=\u042d\u0442\u043e\u0442 \u0440\u0435\u0436\u0438\u043c \u0442\u0430\u043a \u0436\u0435 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442 \u0443\u0434\u0430\u043b\u0435\u043d\u0438\u044f\!\n\u041f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c ?
