--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -379,19 +379,20 @@ join_by_invitation.name=Einladung laden
 limitedconnection.text=PowerFolder hat eingeschr\u00e4nkte Konnektivit\u00e4t zum Netzwerk entdeckt.\nDer Grund k\u00f6nnte an Ihrer Firewall, Ihrem Router oder an einer Windows-Verbindungsteilung liegen.\nWie Sie die Konnektivit\u00e4t verbessern k\u00f6nnen, erfahren Sie unter\: \nhttp\://docs.powerfolder.com
 limitedconnection.title=Eingeschr\u00e4nkte Konnektivit\u00e4t
 
-##linespeed.T1=T1 1.544mbit/s upload
-##linespeed.T3=T3 43.232mbit/s upload
-##linespeed.adsl128=DSL 128Kbit upload
-##linespeed.adsl256=DSL 256Kbit upload
-##linespeed.adsl512=DSL 512Kbit upload
-##linespeed.adsl768=DSL 768Kbit upload
+##linespeed.T1=T1 xxx/ 1.544mbit
+##linespeed.T3=T3 xxx/ 43.232mbit
+##linespeed.adsl128=DSL xxx/ 128Kbit
+##linespeed.adsl256=DSL xxx/ 256Kbit
+##linespeed.adsl512=DSL xxx/ 512Kbit
+##linespeed.adsl768=DSL xxx/ 768Kbit
 ##linespeed.customspeed=Custom line
-##linespeed.isdnspeed128=ISDN 128Kbit
-##linespeed.isdnspeed64=ISDN 64Kbit
-##linespeed.lan10=LAN 10mbit/s upload
-##linespeed.lan100=LAN 100mbit/s upload
-##linespeed.lan1000=LAN 1000mbit/s upload
-##linespeed.unlimited=Unlimited upload
+##linespeed.downloadspeed=Download limit
+##linespeed.isdnspeed128=ISDN xxx/ 128Kbit
+##linespeed.isdnspeed64=ISDN xxx/ 64Kbit
+##linespeed.lan10=LAN 10mbit/s
+##linespeed.lan100=LAN 100mbit/s 
+##linespeed.lan1000=LAN 1000mbit/s
+##linespeed.unlimited=Unlimited traffic
 ##linespeed.uploadspeed=Upload limit
 
 ##linktoclipboard.description=Copies a clickable PowerFolder link to the clipboard, use to enable people to join this folder and download this file
@@ -701,6 +702,9 @@ splash.version=Version {0}
 startdownloads.description=\u00d6ffnet die ausgew\u00e4hlte und fertig heruntergeladenen Dateien
 startdownloads.key=s
 startdownloads.name=\u00d6ffnen
+
+##status.download=Down\: %.2f KB/s
+##status.upload=Up\: %.2f KB/s
 
 ##synchronisation.notice.title=Activated synchronisation profile {0}
 ##synchronisation.warning.automatic_deletions=This mode will also synchronize file deletions\!\nContinue ?
