--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -379,19 +379,20 @@ joinfolder.already_joined_title=Niet mogelijk lid te worden {0}
 limitedconnection.text=PowerFolder heeft gelimiteerde verbinding naar het netwerk gedetecteerd.\nDit kan worden veroorzaakt door een firewall, router of "delen van bestanden met Windows".\nLees de FAQ om de verbindingen te verbeteren.\nhttp\://www.powerfolder.com
 limitedconnection.title=Beperkte connectie
 
-linespeed.T1=T1 1.544mbit/s upload
-linespeed.T3=T3 43.232mbit/s upload
-linespeed.adsl128=DSL 128Kbit upload
-linespeed.adsl256=DSL 256Kbit upload
-linespeed.adsl512=DSL 512Kbit upload
-linespeed.adsl768=DSL 768Kbit upload
+linespeed.T1=T1 xxx / 1.544mbit/s
+linespeed.T3=T3 xxx / 43.232mbit/s
+linespeed.adsl128=DSL xxx / 128Kbit
+linespeed.adsl256=DSL xxx / 256Kbit
+linespeed.adsl512=DSL xxx / 512Kbit
+linespeed.adsl768=DSL xxx / 768Kbit
 linespeed.customspeed=Kies upload
-##linespeed.downloadspeed=Download limit
-linespeed.isdnspeed128=ISDN 128Kbit
-linespeed.isdnspeed64=ISDN 64Kbit
-linespeed.lan10=LAN 10mbit/s upload
-linespeed.lan100=LAN 100mbit/s upload
-linespeed.lan1000=LAN 1000mbit/s upload
+linespeed.downloadspeed=Download limiet
+linespeed.isdnspeed128=ISDN xxx / 128Kbit
+linespeed.isdnspeed64=ISDN xxx / 64Kbit
+linespeed.lan10=LAN 10mbit/s
+linespeed.lan100=LAN 100mbit/s
+linespeed.lan1000=LAN 1000mbit/s
+
 linespeed.unlimited=Unlimited upload
 linespeed.uploadspeed=Upload limiet
 
