--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -102,7 +102,7 @@ deletefile.name=Verwijder bestand(en)
 dialog.addmembertofriendlist.button.no=Nee
 dialog.addmembertofriendlist.button.no_neveraskagain=Nee (Nooit meer vragen)
 dialog.addmembertofriendlist.button.yes=Ja
-dialog.addmembertofriendlist.explain=(Door iemand aan uw vriendenlijst toe te voegen, geeft u hem/haar toestemming om de bestanden/nin uw folder te wijzigen. Maar ook het toevoegen van bestanden. U kunt de "friend status" van een gebruiker\n met via het popupmenu (rechter muisknop).)
+dialog.addmembertofriendlist.explain=(Door iemand aan uw vriendenlijst toe te voegen, geeft u hem/haar toestemming om de bestanden\nin uw folder te wijzigen. Maar ook het toevoegen van bestanden. U kunt de "friend status" van een gebruiker\n met via het popupmenu (rechter muisknop).)
 dialog.addmembertofriendlist.question={0} werd lid van een of meer folder(s)\:\n\n{1}\nwilt u hem aan uw vriendenlijst toevoegen?
 dialog.addmembertofriendlist.title=Voeg {0} toe aan vriendenlijst
 dialog.alreadyrunning.exitbutton=Afsluiten
