--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -554,7 +554,7 @@ preferences.dialog.plugin.status=Status
 preferences.dialog.plugin.status_disabled=Actief
 preferences.dialog.plugin.status_enabled=InActief
 preferences.dialog.plugin.title=Plugin
-preferences.dialog.restarttext=Door veranderingen in de instellingen is het nootzakelijk dat PowerFolder opnieuw opstart.\nWilt u PowerFolder nu opnieuw opstarten?\n 
+preferences.dialog.restarttext=Door veranderingen in de instellingen is het noodzakelijk dat PowerFolder opnieuw opstart.\nWilt u PowerFolder nu opnieuw opstarten?\n 
 preferences.dialog.restarttitle=Opnieuw opstarten 
 preferences.dialog.showadvanced=Toon geavanceerde instellingen
 preferences.dialog.showpreviewpanel=Activeer interne foto preview 
