--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -379,19 +379,19 @@ infoside.title=Informaci\u00f3n
 limitedconnection.text=PowerFolder ha detectado conectividad limitada a la red.\nPuede ser a causa de un cortafuegos, router o la Conexi\u00f3n Compartida de Windows.\nLa respuesta a c\u00f3mo mejorar su conexi\u00f3n la puede encontrar en nuestro FAQ.\nhttp\://www.powerfolder.com
 limitedconnection.title=Conectividad limitada
 
-##linespeed.T1=T1 xxx/ 1.544mbit
-##linespeed.T3=T3 xxx/ 43.232mbit
-##linespeed.adsl128=DSL xxx/ 128Kbit
-##linespeed.adsl256=DSL xxx/ 256Kbit
-##linespeed.adsl512=DSL xxx/ 512Kbit
-##linespeed.adsl768=DSL xxx/ 768Kbit
+linespeed.T1=T1 (1.544mbit)
+linespeed.T3=T3 (43.232mbit)
+linespeed.adsl128=DSL 1000 (128Kbit up)
+linespeed.adsl256=DSL 2000 (256Kbit up)
+linespeed.adsl512=DSL 6000 (512Kbit up)
+linespeed.adsl768=DSL 16000 (768Kbit up)
 ##linespeed.customspeed=Custom line
 ##linespeed.downloadspeed=Download limit
-##linespeed.isdnspeed128=ISDN xxx/ 128Kbit
-##linespeed.isdnspeed64=ISDN xxx/ 64Kbit
-##linespeed.lan10=LAN 10mbit/s
-##linespeed.lan100=LAN 100mbit/s 
-##linespeed.lan1000=LAN 1000mbit/s
+linespeed.isdnspeed128=Dual ISDN (128Kbit up)
+linespeed.isdnspeed64=ISDN (64Kbit up)
+linespeed.lan10=LAN 10mbit/s
+linespeed.lan100=LAN 100mbit/s 
+linespeed.lan1000=LAN 1000mbit/s
 ##linespeed.unlimited=Unlimited traffic
 ##linespeed.uploadspeed=Upload limit
 
