--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -379,19 +379,19 @@ joinfolder.already_joined_title=Impossible de rejoindre le dossier {0}
 limitedconnection.text=PowerFolder a d\u00e9tect\u00e9 une connexion limit\u00e9 au r\u00e9seau.\nCeci peut provenir d'un logiciel coupe-feu, d'un routeur ou du partage de fichier de Windows.\nPour comprendre le probl\u00e8me, consulter le site suivant (anglais) FAQ.\nhttp\://www.powerfolder.com
 limitedconnection.title=Connexion limit\u00e9e
 
-linespeed.T1=T1 1.544mbit/s \u00e9mission
-linespeed.T3=T3 43.232mbit/s \u00e9mission
-linespeed.adsl128=DSL 128Kbit \u00e9mission
-linespeed.adsl256=DSL 256Kbit \u00e9mission
-linespeed.adsl512=DSL 512Kbit \u00e9mission
-linespeed.adsl768=DSL 768Kbit \u00e9mission
+linespeed.T1=T1 (1.544mbit)
+linespeed.T3=T3 (43.232mbit)
+linespeed.adsl128=DSL 1000 (128Kbit \u00e9mission)
+linespeed.adsl256=DSL 2000 (256Kbit \u00e9mission)
+linespeed.adsl512=DSL 6000 (512Kbit \u00e9mission)
+linespeed.adsl768=DSL 16000 (768Kbit \u00e9mission)
 linespeed.customspeed=D\u00e9bit personnalis\u00e9
 ##linespeed.downloadspeed=Download limit
-linespeed.isdnspeed128=ISDN 128Kbit
-linespeed.isdnspeed64=ISDN 64Kbit
-linespeed.lan10=LAN 10mbit/s \u00e9mission
-linespeed.lan100=LAN 100mbit/s \u00e9mission
-linespeed.lan1000=LAN 1000mbit/s \u00e9mission
+linespeed.isdnspeed128=Dual ISDN (128Kbit \u00e9mission)
+linespeed.isdnspeed64=ISDN (64Kbit \u00e9mission)
+linespeed.lan10=LAN 10mbit/s
+linespeed.lan100=LAN 100mbit/s 
+linespeed.lan1000=LAN 1000mbit/s
 linespeed.unlimited=Emission illimit\u00e9
 linespeed.uploadspeed=Limite en \u00e9mission
 
