--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -379,20 +379,20 @@ joinfolder.already_joined_title=Niet mogelijk lid te worden {0}
 limitedconnection.text=PowerFolder heeft gelimiteerde verbinding naar het netwerk gedetecteerd.\nDit kan worden veroorzaakt door een firewall, router of "delen van bestanden met Windows".\nLees de FAQ om de verbindingen te verbeteren.\nhttp\://www.powerfolder.com
 limitedconnection.title=Beperkte connectie
 
-linespeed.T1=T1 xxx / 1.544mbit/s
-linespeed.T3=T3 xxx / 43.232mbit/s
-linespeed.adsl128=DSL xxx / 128Kbit
-linespeed.adsl256=DSL xxx / 256Kbit
-linespeed.adsl512=DSL xxx / 512Kbit
-linespeed.adsl768=DSL xxx / 768Kbit
+
+linespeed.T1=T1 (1.544mbit)
+linespeed.T3=T3 (43.232mbit)
+linespeed.adsl128=DSL 1000 (128Kbit up)
+linespeed.adsl256=DSL 2000 (256Kbit up)
+linespeed.adsl512=DSL 6000 (512Kbit up)
+linespeed.adsl768=DSL 16000 (768Kbit up)
 linespeed.customspeed=Kies upload
 linespeed.downloadspeed=Download limiet
-linespeed.isdnspeed128=ISDN xxx / 128Kbit
-linespeed.isdnspeed64=ISDN xxx / 64Kbit
+linespeed.isdnspeed128=Dual ISDN (128Kbit up)
+linespeed.isdnspeed64=ISDN (64Kbit up)
 linespeed.lan10=LAN 10mbit/s
-linespeed.lan100=LAN 100mbit/s
+linespeed.lan100=LAN 100mbit/s 
 linespeed.lan1000=LAN 1000mbit/s
-
 linespeed.unlimited=Unlimited upload
 linespeed.uploadspeed=Upload limiet
 
