--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -379,19 +379,19 @@ joinfolder.already_joined_title=\u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436
 limitedconnection.text=PowerFolder \u043e\u0431\u043d\u0430\u0440\u0443\u0436\u0438\u043b \u043e\u0433\u0440\u0430\u043d\u0438\u0447\u0435\u043d\u043e\u0435 \u0441\u0435\u0442\u0435\u0432\u043e\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435.\n\u041f\u0440\u0438\u0447\u0438\u043d\u043e\u0439 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0431\u0440\u0430\u043d\u0434\u043c\u0430\u0443\u0435\u0440, \u0440\u0443\u0442\u0435\u0440 \u0438\u043b\u0438 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 Windows.\n\u041a\u0430\u043a \u0443\u043b\u0443\u0447\u0448\u0438\u0442\u044c \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u0432\u044b \u0443\u0437\u043d\u0430\u0435\u0442\u0435 \u043d\u0430\: \nhttp\://www.powerfolder.com
 limitedconnection.title=\u041e\u0433\u0440\u0430\u043d\u0438\u0447\u0435\u043d\u043e\u0435 \u0441\u0435\u0442\u0435\u0432\u043e\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435
 
-linespeed.T1=T1 1.544mbit/s upload
-linespeed.T3=T3 43.232mbit/s upload
-linespeed.adsl128=DSL 128Kbit upload
-linespeed.adsl256=DSL 256Kbit upload
-linespeed.adsl512=DSL 512Kbit upload
-linespeed.adsl768=DSL 768Kbit upload
+linespeed.T1=T1 (1.544mbit)
+linespeed.T3=T3 (43.232mbit)
+linespeed.adsl128=DSL 1000 (128Kbit up)
+linespeed.adsl256=DSL 2000 (256Kbit up)
+linespeed.adsl512=DSL 6000 (512Kbit up)
+linespeed.adsl768=DSL 16000 (768Kbit up)
 linespeed.customspeed=\u0414\u0440\u0443\u0433\u043e\u0435
 ##linespeed.downloadspeed=Download limit
-linespeed.isdnspeed128=ISDN 128Kbit
-linespeed.isdnspeed64=ISDN 64Kbit
-linespeed.lan10=LAN 10mbit/s upload
-linespeed.lan100=LAN 100mbit/s upload
-linespeed.lan1000=LAN 1000mbit/s upload
+linespeed.isdnspeed128=Dual ISDN (128Kbit up)
+linespeed.isdnspeed64=ISDN (64Kbit up)
+linespeed.lan10=LAN 10mbit/s
+linespeed.lan100=LAN 100mbit/s 
+linespeed.lan1000=LAN 1000mbit/s
 linespeed.unlimited=\u041d\u0435\u043e\u0433\u0440\u0430\u043d\u0438\u0447\u0435\u043d\u044b\u0439 upload
 linespeed.uploadspeed=\u041e\u0433\u0440\u0430\u043d\u0438\u0447\u0435\u043d\u0438\u0435 \u043d\u0430 upload
 
