--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -379,21 +379,21 @@ join_by_invitation.name=Einladung laden
 limitedconnection.text=PowerFolder hat eingeschr\u00e4nkte Konnektivit\u00e4t zum Netzwerk entdeckt.\nDer Grund k\u00f6nnte an Ihrer Firewall, Ihrem Router oder an einer Windows-Verbindungsteilung liegen.\nWie Sie die Konnektivit\u00e4t verbessern k\u00f6nnen, erfahren Sie unter\: \nhttp\://docs.powerfolder.com
 limitedconnection.title=Eingeschr\u00e4nkte Konnektivit\u00e4t
 
-##linespeed.T1=T1 xxx/ 1.544mbit
-##linespeed.T3=T3 xxx/ 43.232mbit
-##linespeed.adsl128=DSL xxx/ 128Kbit
-##linespeed.adsl256=DSL xxx/ 256Kbit
-##linespeed.adsl512=DSL xxx/ 512Kbit
-##linespeed.adsl768=DSL xxx/ 768Kbit
-##linespeed.customspeed=Custom line
-##linespeed.downloadspeed=Download limit
-##linespeed.isdnspeed128=ISDN xxx/ 128Kbit
-##linespeed.isdnspeed64=ISDN xxx/ 64Kbit
-##linespeed.lan10=LAN 10mbit/s
-##linespeed.lan100=LAN 100mbit/s 
-##linespeed.lan1000=LAN 1000mbit/s
-##linespeed.unlimited=Unlimited traffic
-##linespeed.uploadspeed=Upload limit
+linespeed.T1=T1 (1.544mbit)
+linespeed.T3=T3 (43.232mbit)
+linespeed.adsl128=DSL 1000 (128Kbit up)
+linespeed.adsl256=DSL 2000 (256Kbit up)
+linespeed.adsl512=DSL 6000 (512Kbit up)
+linespeed.adsl768=DSL 16000 (768Kbit up)
+linespeed.customspeed=Benutzerdefiniert
+linespeed.downloadspeed=Download limit
+linespeed.isdnspeed128=Dual ISDN (128Kbit up)
+linespeed.isdnspeed64=ISDN (64Kbit up)
+linespeed.lan10=LAN 10mbit/s
+linespeed.lan100=LAN 100mbit/s 
+linespeed.lan1000=LAN 1000mbit/s
+linespeed.unlimited=Unbegrenzt
+linespeed.uploadspeed=Upload limit
 
 ##linktoclipboard.description=Copies a clickable PowerFolder link to the clipboard, use to enable people to join this folder and download this file
 ##linktoclipboard.key=c
