--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -379,19 +379,19 @@ joinfolder.already_joined_title=Impossibile aggiungersi {0}
 limitedconnection.text=PowerFolder ha rilevato una connettivit\u00E0 limitata sulla rete.\nQuesto potrebbe essere causato da un firewall, un router o dalla condivisione di una connessione su windows.\nPer sapere come aumentare la connettivit\u00E0 leggi le nostre FAQ.\nhttp\://www.powerfolder.com
 limitedconnection.title=Connettivit\u00E0 limitata
 
-linespeed.T1=T1 1.544mbit/s upload
-linespeed.T3=T3 43.232mbit/s upload
-linespeed.adsl128=DSL 128Kbit upload
-linespeed.adsl256=DSL 256Kbit upload
-linespeed.adsl512=DSL 512Kbit upload
-linespeed.adsl768=DSL 768Kbit upload
+linespeed.T1=T1 (1.544mbit)
+linespeed.T3=T3 (43.232mbit)
+linespeed.adsl128=DSL 1000 (128Kbit up)
+linespeed.adsl256=DSL 2000 (256Kbit up)
+linespeed.adsl512=DSL 6000 (512Kbit up)
+linespeed.adsl768=DSL 16000 (768Kbit up)
 linespeed.customspeed=Linea dedicata
 linespeed.downloadspeed=Limite per il download
-linespeed.isdnspeed128=ISDN 128Kbit
-linespeed.isdnspeed64=ISDN 64Kbit
-linespeed.lan10=LAN 10mbit/s upload
-linespeed.lan100=LAN 100mbit/s upload
-linespeed.lan1000=LAN 1000mbit/s upload
+linespeed.isdnspeed128=Dual ISDN (128Kbit up)
+linespeed.isdnspeed64=ISDN (64Kbit up)
+linespeed.lan10=LAN 10mbit/s
+linespeed.lan100=LAN 100mbit/s 
+linespeed.lan1000=LAN 1000mbit/s
 linespeed.unlimited=Upload illimitato
 linespeed.uploadspeed=Limite di Upload
 
