fixed tooltip on fast speeds

--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -728,9 +728,11 @@ systray.powerfolder=PowerFolder v{0}
 systray.show=Afficher
 systray.syncall=Dossiers synchronis\u00e9s
 systray.tooltip.down=DOWN {0} KBs
+systray.tooltip.down.mb=DOWN {0} MBs
 systray.tooltip.insync=InSync
 systray.tooltip.syncing=Syncing
 systray.tooltip.up=UP {0} KBs
+systray.tooltip.up.mb=UP {0} MBs
 
 title.friends=Liste d'ami(e)s
 title.my.folders=Mes dossiers partag\u00e9s 
