--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -728,9 +728,11 @@ systray.powerfolder=PowerFolder v{0}
 systray.show=Mostra
 systray.syncall=Sincronizza Cartelle
 systray.tooltip.down=DOWN {0} KBs
+systray.tooltip.down.mb=DOWN {0} MBs
 systray.tooltip.insync=InSync
 systray.tooltip.syncing=Syncing
 systray.tooltip.up=UP {0} KBs
+systray.tooltip.up.mb=UP {0} MBs
 
 title.friends=Amici
 title.my.folders=Mie cartelle
