--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -733,9 +733,11 @@ systray.powerfolder=PowerFolder v{0}
 systray.show=\u8868\u793a
 systray.syncall=\u30d5\u30a9\u30eb\u30c0\u540c\u671f
 systray.tooltip.down=\u53d7\u4fe1 {0} KBs
+systray.tooltip.down.mb=\u53d7\u4fe1 {0} MBs
 systray.tooltip.insync=\u540c\u671f\u6e08
 systray.tooltip.syncing=\u540c\u671f\u4e2d
 systray.tooltip.up=\u9001\u4fe1 {0} KBs
+systray.tooltip.up.mb=\u9001\u4fe1 {0} MBs
 
 title.friends=\u53cb\u4eba
 title.my.folders=\u30de\u30a4 \u30d5\u30a9\u30eb\u30c0
