--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -729,9 +729,11 @@ systray.powerfolder=PowerFolder v{0}
 systray.show=Show
 systray.syncall=Sync Folders
 systray.tooltip.down=DOWN {0} KBs
+systray.tooltip.down.mb=DOWN {0} MBs
 systray.tooltip.insync=InSync
 systray.tooltip.syncing=Syncing
 systray.tooltip.up=UP {0} KBs
+systray.tooltip.up.mb=UP {0} MBs
 
 title.friends=Vrienden
 title.my.folders=Mijn Folders 
