--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -656,7 +656,7 @@ rootpanel.friends=Freunde
 
 scanallfolders.description=Synchronisiert jetzt alle Folder
 scanallfolders.key=a
-scanallfolders.name=Sync Folders
+scanallfolders.name=Sync jetzt
 
 scanfolder.description=Aktualisiert die Inhalte des Folders auf Abruf
 scanfolder.key=s
